Attempt to fix dropdown on safari

--- a/assets/sass/components/_dropdown.scss
+++ b/assets/sass/components/_dropdown.scss
@@ -14,6 +14,10 @@
     transition: all .3s ease-in-out;
     text-decoration: none;
 
+    :focus {
+      outline: none;
+    }
+
     &:hover {
       color: $page_color_4;
     }
